# social_network

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
nginx/: app.conf
src/apps/account/: admin.py  dal.py  mixins.py  models.py  urls.py
src/apps/account/migrations/: 0001_initial.py  0002_account_gender_alter_account_last_login.py  0003_alter_account_description_alter_account_photo.py  0004_alter_account_photo.py  0005_contract_account_followings_and_more.py  0006_account_cover.py  0007_rename_contract_followcontract_and_more.py  0008_TrigramExtension.py
src/apps/base/: context_processors.py
src/apps/base/templatetags/: dot_to_paragraph.py  human_month.py  minus.py
src/apps/dashboard/: admin.py  models.py  urls.py
src/apps/dashboard/migrations/: 0001_initial.py  0002_action_dashboard_a_content_8ee0c3_idx.py
src/apps/dashboard/services/: create_action.py
src/apps/post/: admin.py  dal.py  models.py  urls.py
src/apps/post/migrations/: 0001_initial.py  (+10 more)
src/apps/registration/: mixins.py  urls.py
src/config/: urls.py
src/config/settings/: __init__.py  auth.py  base.py  databases.py
src/services/filter/: __init__.py  exceptions.py  factory.py  filter.py  spec_collection.py  specification.py
src/services/pagination/: pagination.py
src/services/queryset_chain/: queryset_chain.py
src/services/search/: __init__.py  fabric.py  search.py
src/utils/mixins_to_context/: mixins_to_context.py
src/utils/query_debugger/: __init__.py  query_debugger.py
src/utils/widgets/: birthday_date.py
(+449 files in other folders)
