[tool.poetry]
name = "social-network"
version = "0.1.0"
description = ""
authors = ["emurze <rozanov7475@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.7.2"
django = "4.2.4"
django-ckeditor = "6.0.0"
django-debug-toolbar = "4.1.0"
djangorestframework = "3.14.0"
easy-thumbnails = "2.8.5"
lorem = "0.1.1"
pillow = "10.0.0"
psycopg2-binary = "2.9.7"
pytz = "2023.3"
sqlparse = "0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
